# AdventOfCode-Haskell

./: .gitignore  AdventOfCode-Haskell.cabal  CHANGELOG.md  LICENSE
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: FunctionMap.hs  Main.hs  OptionsParser.hs
src/2015/: Day1.hs  Day2.hs  Day3.hs
src/2016/: Day1.hs
src/2018/: Day1.hs
src/2019/: Day1.hs  Day2.hs
src/2020/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/2023/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/: Main.hs
src/App/Solutions/: Y2015.hs  Y2016.hs  Y2017.hs  Y2018.hs  Y2019.hs  Y2020.hs  Y2021.hs  Y2022.hs  Y2023.hs  Y2024.hs  Y2025.hs
src/App/Solutions/Y2015/: Day1.hs  Day10.hs  Day12.hs  Day13.hs  Day15.hs  Day19.hs  Day2.hs  Day21.hs  Day22.hs  Day23.hs  Day25.hs  Day3.hs  Day4.hs  Day8.hs
src/App/Solutions/Y2016/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2017/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2018/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2019/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2020/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2021/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2022/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2023/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2024/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Solutions/Y2025/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/App/Utils/: Combinatorics.hs  Geometry.hs  Geometry2D.hs  Geometry3D.hs  List.hs  Map2D.hs  Math.hs  Matrix.hs  SplitOn.hs  Tuple.hs
src/Meta/: Main.hs
src/Solutions/Y2015/: Day11.hs  Day14.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day24.hs  Day5.hs  Day6.hs  Day7.hs  Day9.hs
src/Solutions/Y2016/: Day1.hs
src/Solutions/Y2017/: Day1.hs
src/Solutions/Y2020/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day4.hs  Day7.hs
src/Solutions/Y2023/: Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day7.hs
templates/: dayTemplate.txt  yearTemplate.txt
