cabal-version:      2.4
name:               AdventOfCode-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adssx-dev
maintainer:         adssx.dev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable AdventOfCode-Haskell
    main-is:          Main.hs

    ghc-options:
        -O2
        -threaded
        -fprof-auto
        "-with-rtsopts=-N"

    -- Modules included in this executable, other than Main.
    other-modules: OptionsParser
        , Utils.Combinatorics
        , Utils.Geometry2D
        , Utils.Geometry3D
        , Utils.List
        , Utils.Map2D
        , Utils.Math
        , Utils.Matrix
        , Utils.Tuple
        , Solutions.Y2015
        , Solutions.Y2015.Day1
        , Solutions.Y2015.Day2
        , Solutions.Y2015.Day3
        , Solutions.Y2015.Day4
        , Solutions.Y2015.Day5
        , Solutions.Y2015.Day6
        , Solutions.Y2015.Day7
        , Solutions.Y2015.Day8
        , Solutions.Y2015.Day9
        , Solutions.Y2015.Day10
        , Solutions.Y2015.Day11
        , Solutions.Y2015.Day12
        , Solutions.Y2015.Day13
        , Solutions.Y2015.Day14
        , Solutions.Y2015.Day15
        , Solutions.Y2015.Day16
        , Solutions.Y2015.Day17
        , Solutions.Y2015.Day18
        , Solutions.Y2015.Day19
        , Solutions.Y2015.Day20
        , Solutions.Y2015.Day21
        , Solutions.Y2015.Day22
        , Solutions.Y2015.Day23
        , Solutions.Y2015.Day24
        , Solutions.Y2015.Day25
        , Solutions.Y2016
        , Solutions.Y2016.Day1
        , Solutions.Y2016.Day2
        , Solutions.Y2016.Day3
        , Solutions.Y2016.Day4
        , Solutions.Y2016.Day5
        , Solutions.Y2016.Day6
        , Solutions.Y2016.Day7
        , Solutions.Y2016.Day8
        , Solutions.Y2016.Day9
        , Solutions.Y2016.Day10
        , Solutions.Y2016.Day11
        , Solutions.Y2016.Day12
        , Solutions.Y2016.Day13
        , Solutions.Y2016.Day14
        , Solutions.Y2016.Day15
        , Solutions.Y2016.Day16
        , Solutions.Y2016.Day17
        , Solutions.Y2016.Day18
        , Solutions.Y2016.Day19
        , Solutions.Y2016.Day20
        , Solutions.Y2016.Day21
        , Solutions.Y2016.Day22
        , Solutions.Y2016.Day23
        , Solutions.Y2016.Day24
        , Solutions.Y2016.Day25
        , Solutions.Y2017
        , Solutions.Y2017.Day1
        , Solutions.Y2017.Day2
        , Solutions.Y2017.Day3
        , Solutions.Y2017.Day4
        , Solutions.Y2017.Day5
        , Solutions.Y2017.Day6
        , Solutions.Y2017.Day7
        , Solutions.Y2017.Day8
        , Solutions.Y2017.Day9
        , Solutions.Y2017.Day10
        , Solutions.Y2017.Day11
        , Solutions.Y2017.Day12
        , Solutions.Y2017.Day13
        , Solutions.Y2017.Day14
        , Solutions.Y2017.Day15
        , Solutions.Y2017.Day16
        , Solutions.Y2017.Day17
        , Solutions.Y2017.Day18
        , Solutions.Y2017.Day19
        , Solutions.Y2017.Day20
        , Solutions.Y2017.Day21
        , Solutions.Y2017.Day22
        , Solutions.Y2017.Day23
        , Solutions.Y2017.Day24
        , Solutions.Y2017.Day25
        , Solutions.Y2018
        , Solutions.Y2018.Day1
        , Solutions.Y2018.Day2
        , Solutions.Y2018.Day3
        , Solutions.Y2018.Day4
        , Solutions.Y2018.Day5
        , Solutions.Y2018.Day6
        , Solutions.Y2018.Day7
        , Solutions.Y2018.Day8
        , Solutions.Y2018.Day9
        , Solutions.Y2018.Day10
        , Solutions.Y2018.Day11
        , Solutions.Y2018.Day12
        , Solutions.Y2018.Day13
        , Solutions.Y2018.Day14
        , Solutions.Y2018.Day15
        , Solutions.Y2018.Day16
        , Solutions.Y2018.Day17
        , Solutions.Y2018.Day18
        , Solutions.Y2018.Day19
        , Solutions.Y2018.Day20
        , Solutions.Y2018.Day21
        , Solutions.Y2018.Day22
        , Solutions.Y2018.Day23
        , Solutions.Y2018.Day24
        , Solutions.Y2018.Day25
        , Solutions.Y2019
        , Solutions.Y2019.Day1
        , Solutions.Y2019.Day2
        , Solutions.Y2019.Day3
        , Solutions.Y2019.Day4
        , Solutions.Y2019.Day5
        , Solutions.Y2019.Day6
        , Solutions.Y2019.Day7
        , Solutions.Y2019.Day8
        , Solutions.Y2019.Day9
        , Solutions.Y2019.Day10
        , Solutions.Y2019.Day11
        , Solutions.Y2019.Day12
        , Solutions.Y2019.Day13
        , Solutions.Y2019.Day14
        , Solutions.Y2019.Day15
        , Solutions.Y2019.Day16
        , Solutions.Y2019.Day17
        , Solutions.Y2019.Day18
        , Solutions.Y2019.Day19
        , Solutions.Y2019.Day20
        , Solutions.Y2019.Day21
        , Solutions.Y2019.Day22
        , Solutions.Y2019.Day23
        , Solutions.Y2019.Day24
        , Solutions.Y2019.Day25
        , Solutions.Y2020
        , Solutions.Y2020.Day1
        , Solutions.Y2020.Day2
        , Solutions.Y2020.Day3
        , Solutions.Y2020.Day4
        , Solutions.Y2020.Day5
        , Solutions.Y2020.Day6
        , Solutions.Y2020.Day7
        , Solutions.Y2020.Day8
        , Solutions.Y2020.Day9
        , Solutions.Y2020.Day10
        , Solutions.Y2020.Day11
        , Solutions.Y2020.Day12
        , Solutions.Y2020.Day13
        , Solutions.Y2020.Day14
        , Solutions.Y2020.Day15
        , Solutions.Y2020.Day16
        , Solutions.Y2020.Day17
        , Solutions.Y2020.Day18
        , Solutions.Y2020.Day19
        , Solutions.Y2020.Day20
        , Solutions.Y2020.Day21
        , Solutions.Y2020.Day22
        , Solutions.Y2020.Day23
        , Solutions.Y2020.Day24
        , Solutions.Y2020.Day25
        , Solutions.Y2021
        , Solutions.Y2021.Day1
        , Solutions.Y2021.Day2
        , Solutions.Y2021.Day3
        , Solutions.Y2021.Day4
        , Solutions.Y2021.Day5
        , Solutions.Y2021.Day6
        , Solutions.Y2021.Day7
        , Solutions.Y2021.Day8
        , Solutions.Y2021.Day9
        , Solutions.Y2021.Day10
        , Solutions.Y2021.Day11
        , Solutions.Y2021.Day12
        , Solutions.Y2021.Day13
        , Solutions.Y2021.Day14
        , Solutions.Y2021.Day15
        , Solutions.Y2021.Day16
        , Solutions.Y2021.Day17
        , Solutions.Y2021.Day18
        , Solutions.Y2021.Day19
        , Solutions.Y2021.Day20
        , Solutions.Y2021.Day21
        , Solutions.Y2021.Day22
        , Solutions.Y2021.Day23
        , Solutions.Y2021.Day24
        , Solutions.Y2021.Day25
        , Solutions.Y2022
        , Solutions.Y2022.Day1
        , Solutions.Y2022.Day2
        , Solutions.Y2022.Day3
        , Solutions.Y2022.Day4
        , Solutions.Y2022.Day5
        , Solutions.Y2022.Day6
        , Solutions.Y2022.Day7
        , Solutions.Y2022.Day8
        , Solutions.Y2022.Day9
        , Solutions.Y2022.Day10
        , Solutions.Y2022.Day11
        , Solutions.Y2022.Day12
        , Solutions.Y2022.Day13
        , Solutions.Y2022.Day14
        , Solutions.Y2022.Day15
        , Solutions.Y2022.Day16
        , Solutions.Y2022.Day17
        , Solutions.Y2022.Day18
        , Solutions.Y2022.Day19
        , Solutions.Y2022.Day20
        , Solutions.Y2022.Day21
        , Solutions.Y2022.Day22
        , Solutions.Y2022.Day23
        , Solutions.Y2022.Day24
        , Solutions.Y2022.Day25
        , Solutions.Y2023
        , Solutions.Y2023.Day1
        , Solutions.Y2023.Day2
        , Solutions.Y2023.Day3
        , Solutions.Y2023.Day4
        , Solutions.Y2023.Day5
        , Solutions.Y2023.Day6
        , Solutions.Y2023.Day7
        , Solutions.Y2023.Day8
        , Solutions.Y2023.Day9
        , Solutions.Y2023.Day10
        , Solutions.Y2023.Day11
        , Solutions.Y2023.Day12
        , Solutions.Y2023.Day13
        , Solutions.Y2023.Day14
        , Solutions.Y2023.Day15
        , Solutions.Y2023.Day16
        , Solutions.Y2023.Day17
        , Solutions.Y2023.Day18
        , Solutions.Y2023.Day19
        , Solutions.Y2023.Day20
        , Solutions.Y2023.Day21
        , Solutions.Y2023.Day22
        , Solutions.Y2023.Day23
        , Solutions.Y2023.Day24
        , Solutions.Y2023.Day25
        , Solutions.Y2024
        , Solutions.Y2024.Day1
        , Solutions.Y2024.Day2
        , Solutions.Y2024.Day3
        , Solutions.Y2024.Day4
        , Solutions.Y2024.Day5
        , Solutions.Y2024.Day6
        , Solutions.Y2024.Day7
        , Solutions.Y2024.Day8
        , Solutions.Y2024.Day9
        , Solutions.Y2024.Day10
        , Solutions.Y2024.Day11
        , Solutions.Y2024.Day12
        , Solutions.Y2024.Day13
        , Solutions.Y2024.Day14
        , Solutions.Y2024.Day15
        , Solutions.Y2024.Day16
        , Solutions.Y2024.Day17
        , Solutions.Y2024.Day18
        , Solutions.Y2024.Day19
        , Solutions.Y2024.Day20
        , Solutions.Y2024.Day21
        , Solutions.Y2024.Day22
        , Solutions.Y2024.Day23
        , Solutions.Y2024.Day24
        , Solutions.Y2024.Day25
        , Solutions.Y2025
        , Solutions.Y2025.Day1
        , Solutions.Y2025.Day2
        , Solutions.Y2025.Day3
        , Solutions.Y2025.Day4
        , Solutions.Y2025.Day5
        , Solutions.Y2025.Day6
        , Solutions.Y2025.Day7
        , Solutions.Y2025.Day8
        , Solutions.Y2025.Day9
        , Solutions.Y2025.Day10
        , Solutions.Y2025.Day11
        , Solutions.Y2025.Day12

    
    
    build-depends:    
        base ^>=4.17.2.0
        , containers
        , optparse-applicative
        , filepath ^>=1.5.3.0
        , directory
        , pretty
        , template-haskell
    hs-source-dirs:   src/App/
    default-language: Haskell2010


executable PrepareYear
    main-is: Main.hs
    build-depends:    
        base ^>=4.17.2.0
        , containers
        , optparse-applicative
        , filepath ^>=1.5.3.0
        , text
        , directory
    hs-source-dirs:   src/Meta/
    default-language: Haskell2010